# clang-tidy-misra

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.TXT  README.md  clang-tidy.patch
.circleci/: config.yml
buildagent/: build.sh
doc/: c2012.md  cpp2008.md
src/: ClangTidyMisraCheck.cpp  ClangTidyMisraCheck.h  MISRATidyModule.cpp  RuleHeadlineTexts.cpp  RuleHeadlineTexts.h
src/rules/c2012/: 17.1.cpp  17.1.h  6.2.cpp  6.2.h
src/rules/common/: BannedInclude.h  BannedMacro.h
src/rules/cpp2008/: 10-3-2.cpp  10-3-2.h  10-3-3.cpp  10-3-3.h  11-0-1.cpp  11-0-1.h  12-8-2.cpp  12-8-2.h  15-5-1.cpp  15-5-1.h  16-3-1.cpp  16-3-1.h  16-3-2.cpp  16-3-2.h  17-0-1.cpp  17-0-1.h  17-0-5.cpp  17-0-5.h  18-0-1.cpp  18-0-1.h  18-0-2.cpp  18-0-2.h  18-0-3.cpp  18-0-3.h  18-0-4.cpp  18-0-4.h  18-0-5.cpp  18-0-5.h  18-2-1.cpp  18-2-1.h  18-4-1.cpp  18-4-1.h  18-7-1.cpp  18-7-1.h  19-3-1.cpp  19-3-1.h  2-13-3.cpp  2-13-3.h  27-0-1.cpp  27-0-1.h  (+10 more)
test/: .clang-format  CMakeLists.txt  check_clang_tidy.py  lit.cfg  lit.site.cfg.in
test-wishlist/: .clang-format  LICENSE.TXT
test-wishlist/c2012/: 2.4.c  4.1.c  5.4.c  5.5.c
test-wishlist/cpp2008/: 18-7-1.cpp
test/c2012/: 1.1.c  1.2.c  17.1.c  2.3.c  2.5.c  2.6.c  3.2.c  4.2.c  6.2.c
test/common/: disable-IgnoreCommandLineLocations.cpp  enable-IgnoreCommandLineLocations.cpp
test/cpp2008/: 10-3-2.cpp  10-3-3.cpp  11-0-1.cpp  12-8-2.cpp  15-5-1.cpp  16-3-1.cpp  16-3-2.cpp  17-0-1.cpp  17-0-5.cpp  18-0-1.cpp  18-0-2.cpp  18-0-3.cpp  18-0-4.cpp  18-0-5.cpp  18-2-1.cpp  18-4-1.cpp  18-7-1.cpp  19-3-1.cpp  2-13-3.cpp  2-3-1.cpp  2-7-1.cpp  27-0-1.cpp  4-10-1.cpp  4-10-2.cpp  5-0-1.cpp  5-0-4.cpp  5-0-5.cpp  5-0-6.cpp  6-4-1.cpp  6-4-2.cpp  6-4-4.cpp  6-4-7.cpp  9-5-1.cpp
travis/: build.sh
